Add more entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+logging.level.org.hibernate.type=trace
