Add Cacheable endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 logging.level.org.hibernate.type=trace
+spring.cache.jcache.config=classpath:ehcache.xml
